      compose dict local variable to a class attribute 'compose_attrs'.
    + Implement boolean attribute conversion in 'HTMLBuilder.optimize_attrs()'.
    + Refactor 'format_attrs()' to 'HTMLBuilder.render_attrs()'. Change the
      argument to a dict instead of keyword args. Delete the None handling
      because 'HTMLBuilder.optimize_attrs()' now does it.

- webhelpers.html.tags:

    * Delete 'xml_declaration()'.
    * Delete 'convert_boolean_attrs()'. The HTML builder now does this itself.
    * Rename 'link_to()' to 'link()', 'link_to_if()' to 'link_if()', and
      'link_to_unless()' to 'link_unless()'. Keep the old names as aliases for
      backward compatibility.
    * The 'id_format' argument to the 'ModelTags' constructor now uses "{}"
      string formatting. It still accepts "%s" for backward compatibility and
      converts it to the newer format.
    * Add a space between the widget and the label when rendering 'checkbox()'
      or 'radio()' with the 'label' argument.
    * 'checkbox()' and 'radio()' have a new keyword argument 'label_class'.
      This sets the <label>'s class attribute.

    * Implementation changes:

      + Call 'HTML.tag()' rather than attribute access for a slight performance
        improvement.

- webhelpers.html.tools:

    * Implementation changes:

      + Unpack nested tag expression in 'button_to()'.
      + Input helpers call '_input()' to render themselves. It subsumes the
        old '_set_input_attrs()' code.
        

- Port doctests in 'html' subpackage to unit tests.

2.0b5 (2013-11-24)
------------------

- Port to Python 3.  Tested on Python 3.3.2 and 2.7.4.
- Depend on the 'six' distribution for Python 2/3 unification.
- Removed all "u" string prefixes so it should work on Python 3.2. (Prefixes in
  former doctests remain; these have not been supported as doctests since
  2.0b4.)

2.0b4 (2013-11-11)
------------------

- Change test suite to py.test, and convert doctests to unit tests. Some Python